--- a/notebooks/online_retail_rfm_clv(historical)_realdata.ipynb
+++ b/notebooks/online_retail_rfm_clv(historical)_realdata.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {
     "id": "URIT4vvBsV2o"
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "id": "02WUhMPPsW6T"
    },
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -160,7 +160,7 @@
        "4         6  2010-12-01        3.39  20.34      17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -197,7 +197,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -251,7 +251,7 @@
        "(Timestamp('2011-12-09 00:00:00'), Timestamp('2010-12-01 00:00:00'))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -375,7 +375,7 @@
        "[4290 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -403,7 +403,7 @@
        "(4290,)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {
     "id": "c0b835d0"
    },
@@ -524,7 +524,7 @@
        "[4290 rows x 1 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -610,7 +610,7 @@
        "4      12352.0          7"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -706,7 +706,7 @@
        "4      12352.0   1385.74"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -814,7 +814,7 @@
        "4      12352.0       37          7   1385.74"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -848,7 +848,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -945,7 +945,7 @@
        "54        12415.0       25         15   67004.37"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1095,7 +1095,7 @@
        "4         6 2010-12-01        3.39  20.34      17850.0  United Kingdom  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1219,7 +1219,7 @@
        "[4290 rows x 2 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1324,7 +1324,7 @@
        "4      12352.0       37          7   1385.74         1385.74"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,7 +1336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {
     "id": "zbBJHWUaz6Od"
    },
@@ -1348,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1434,7 +1434,7 @@
        "4       37          7   1385.74         1385.74"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1445,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1529,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {
     "id": "Yhh_RsoCyfBW"
    },
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {
     "id": "ZyCptCA6yfDr"
    },
@@ -1551,7 +1551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1582,6 +1582,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>customer_id</th>\n",
        "      <th>recency</th>\n",
        "      <th>frequency</th>\n",
        "      <th>monetary</th>\n",
@@ -1591,6 +1592,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>12347.0</td>\n",
        "      <td>3</td>\n",
        "      <td>7</td>\n",
        "      <td>4060.40</td>\n",
@@ -1598,6 +1600,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>12348.0</td>\n",
        "      <td>76</td>\n",
        "      <td>4</td>\n",
        "      <td>1186.68</td>\n",
@@ -1605,6 +1608,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>12349.0</td>\n",
        "      <td>19</td>\n",
        "      <td>1</td>\n",
        "      <td>1353.80</td>\n",
@@ -1612,6 +1616,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>12350.0</td>\n",
        "      <td>311</td>\n",
        "      <td>1</td>\n",
        "      <td>294.40</td>\n",
@@ -1619,6 +1624,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>12352.0</td>\n",
        "      <td>37</td>\n",
        "      <td>7</td>\n",
        "      <td>1385.74</td>\n",
@@ -1630,9 +1636,11 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4285</th>\n",
+       "      <td>18280.0</td>\n",
        "      <td>278</td>\n",
        "      <td>1</td>\n",
        "      <td>180.60</td>\n",
@@ -1640,6 +1648,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4286</th>\n",
+       "      <td>18281.0</td>\n",
        "      <td>181</td>\n",
        "      <td>1</td>\n",
        "      <td>46.92</td>\n",
@@ -1647,6 +1656,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4287</th>\n",
+       "      <td>18282.0</td>\n",
        "      <td>8</td>\n",
        "      <td>2</td>\n",
        "      <td>178.05</td>\n",
@@ -1654,6 +1664,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4288</th>\n",
+       "      <td>18283.0</td>\n",
        "      <td>4</td>\n",
        "      <td>16</td>\n",
        "      <td>2078.93</td>\n",
@@ -1661,6 +1672,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4289</th>\n",
+       "      <td>18287.0</td>\n",
        "      <td>43</td>\n",
        "      <td>3</td>\n",
        "      <td>1837.28</td>\n",
@@ -1668,33 +1680,33 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4290 rows × 4 columns</p>\n",
+       "<p>4290 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      recency  frequency  monetary  clv_historical\n",
-       "0           3          7   4060.40         4060.40\n",
-       "1          76          4   1186.68         1186.68\n",
-       "2          19          1   1353.80         1353.80\n",
-       "3         311          1    294.40          294.40\n",
-       "4          37          7   1385.74         1385.74\n",
-       "...       ...        ...       ...             ...\n",
-       "4285      278          1    180.60          180.60\n",
-       "4286      181          1     46.92           46.92\n",
-       "4287        8          2    178.05          178.05\n",
-       "4288        4         16   2078.93         2078.93\n",
-       "4289       43          3   1837.28         1837.28\n",
+       "      customer_id  recency  frequency  monetary  clv_historical\n",
+       "0         12347.0        3          7   4060.40         4060.40\n",
+       "1         12348.0       76          4   1186.68         1186.68\n",
+       "2         12349.0       19          1   1353.80         1353.80\n",
+       "3         12350.0      311          1    294.40          294.40\n",
+       "4         12352.0       37          7   1385.74         1385.74\n",
+       "...           ...      ...        ...       ...             ...\n",
+       "4285      18280.0      278          1    180.60          180.60\n",
+       "4286      18281.0      181          1     46.92           46.92\n",
+       "4287      18282.0        8          2    178.05          178.05\n",
+       "4288      18283.0        4         16   2078.93         2078.93\n",
+       "4289      18287.0       43          3   1837.28         1837.28\n",
        "\n",
-       "[4290 rows x 4 columns]"
+       "[4290 rows x 5 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rfm_clv_n"
+    "rfm_clv"
    ]
   },
   {
